--- a/catan-ui/package.json
+++ b/catan-ui/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@pixi/react": "^7.1.1",
+    "konva": "^9.3.11",
     "next": "latest",
     "pixi.js": "^7.3.1",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "react-konva": "^18.2.10",
+    "use-image": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "latest",
